--- a/index1.html
+++ b/index1.html
@@ -8,30 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <diav class="timer-content">
+    <div class="timer-content">
         <header>
             <div class="header-title">Pomofocus</div>
         </header>
         <section class="timer-container">
             <div class="tab-list">
-                <div class="tab-item">Pomodoro</div>        
-                <div class="tab-item active">Short break</div>
-                <div class="tab-item">Long break</div>
+                <div class="tab-item" id="pomodoro">Pomodoro</div>        
+                <div class="tab-item active" id="shortBreak">Short break</div>
+                <div class="tab-item" id="longBreak">Long break</div>
             </div>
-            <div class="tab-item-content " id="pomodoro-content">
-                <div class="time">25:00</div>
-                <button>START</button>
+            <div class="tab-item-content" id="pomodoro-content">
+                <div class="time" id="pomodoro-time">25:00</div>
+                <button id="pomodoroButton">START</button>
             </div>
-            <div class="tab-item-content" id="shortbreak-content">
-                <div class="time">5:00</div>
+            <div class="tab-item-content active" id="shortBreak-content">
+                <div class="time" >5:00</div>
                 <button>START</button>  
             </div>
-            <div class="tab-item-content active" id="longbreak-content">
+            <div class="tab-item-content" id="longBreak-content">
                 <div class="time">15:00</div>
                 <button>START</button>
             </div>
         </section>
     </div>
+    <script type="text/javascript" src="script.js"/>
     
 </body>
 </html>
